[project]
name = "akshay-trading-6"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "matplotlib>=3.10.5",
    "msgpack>=1.1.1",
    "playwright>=1.54.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sortedcontainers>=2.4.0",
    "websockets>=15.0.1",
]
